--- a/Makefile.am
+++ b/Makefile.am
@@ -26,7 +26,8 @@ libmathic_@MATHIC_API_VERSION@_la_SOURCES = src/mathic/Timer.cpp	\
   src/mathic/ElementDeleter.cpp src/mathic/NameFactory.cpp			\
   src/mathic/error.cpp src/mathic/HelpAction.cpp					\
   src/mathic/IntegerParameter.cpp src/mathic/StringParameter.cpp	\
-  src/mathic/display.cpp src/mathic/BitTriangle.cpp
+  src/mathic/display.cpp src/mathic/BitTriangle.cpp					\
+  src/mathic/PairQueue.cpp
 
 # The headers that libmathic installs.
 # Normally, automake strips the path from the files when installing them,
@@ -95,4 +96,5 @@ unittest_LDFLAGS= $(top_builddir)/libmathic-$(MATHIC_API_VERSION).la
 
 test_LIBS=
 unittest_SOURCES=src/test/DivFinder.cpp src/test/gtestInclude.cpp	\
-  src/test/testMain.cpp src/test/BitTriangle.cpp
+  src/test/testMain.cpp src/test/BitTriangle.cpp					\
+  src/test/PairQueue.cpp
