remove libtool; stop building sharable libraries

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,19 +4,16 @@ ACLOCAL_AMFLAGS = -I build/autotools/m4
 
 # Options passed to the C and C++ PreProcessor (CPP) and compiler
 AM_CPPFLAGS = -I${top_srcdir}/
-libmathic_la_CPPFLAGS = $(DEPS_CFLAGS)
+libmathic_a_CPPFLAGS = $(DEPS_CFLAGS)
 
 # tell Libtool what the name of the library is.
-lib_LTLIBRARIES = libmathic.la
+lib_LIBRARIES = libmathic.a
 
 # set the C++ compiler to include src/
 AM_CXXFLAGS=-I$(top_srcdir)/src/ -std=gnu++0x
 
-# libraries that are needed by this library
-libmathic_la_LIBADD= $(DEPS_LIBS)
-
 # the sources that are built to make libmathic.
-libmathic_la_SOURCES = src/mathic/Timer.cpp	\
+libmathic_a_SOURCES = src/mathic/Timer.cpp	\
   src/mathic/ColumnPrinter.cpp src/mathic/DivMask.cpp				\
   src/mathic/Action.cpp src/mathic/BoolParameter.cpp				\
   src/mathic/CliParameter.cpp src/mathic/CliParser.cpp				\
@@ -66,7 +63,7 @@ divsim_SOURCES = src/divsim/divMain.cpp src/divsim/Simulation.cpp		\
   src/divsim/DivListModel.h src/divsim/KDTreeModel.h					\
   src/divsim/Simulation.h src/divsim/divMain.h src/divsim/Monomial.h	\
   src/divsim/stdinc.h
-divsim_LDADD = $(top_builddir)/libmathic.la
+divsim_LDADD = $(top_builddir)/libmathic.a
 
 # set up the priority queue simulation. Listing the headers in sources
 # ensure that those files are included in distributions.
@@ -76,7 +73,7 @@ pqsim_SOURCES = src/pqsim/Item.cpp src/pqsim/Model.cpp				\
   src/pqsim/GeobucketModel.h src/pqsim/Model.h src/pqsim/stdinc.h	\
   src/pqsim/HeapModel.h src/pqsim/pqMain.h src/pqsim/StlSetModel.h	\
   src/pqsim/Item.h src/pqsim/Simulator.h src/pqsim/TourTreeModel.h
-pqsim_LDADD = $(top_builddir)/libmathic.la
+pqsim_LDADD = $(top_builddir)/libmathic.a
 
 
 # set up tests to run on "make check"
@@ -85,10 +82,9 @@ if with_gtest
 TESTS=unittest
 check_PROGRAMS=$(TESTS)
 
-unittest_CPPFLAGS = $(DEPS_CFLAGS)
 unittest_CXXFLAGS = -I$(top_srcdir)/src/ -std=gnu++0x
-unittest_LDADD = $(DEPS_LIBS)
-unittest_LDFLAGS= $(top_builddir)/libmathic.la
+unittest_LDADD = $(top_builddir)/libmathic.a $(DEPS_LIBS)
+unittest_CPPFLAGS = $(DEPS_CFLAGS)
 
 test_LIBS=
 unittest_SOURCES=src/test/DivFinder.cpp src/test/gtestInclude.cpp	\
