Restore libtool; use disable-shared as default.
However, if the configure script is called with the enable-shared option,
then shared libraries will be built.  This is useful building the
Debian package, which includes the shared libraries.

See [1] and [2] for similar commits to memtailor and mathicgb, resp.

[1] https://github.com/Macaulay2/memtailor/commit/835cca2
[2] https://github.com/Macaulay2/mathicgb/commit/427e61f

--- a/configure.ac
+++ b/configure.ac
@@ -113,7 +113,8 @@ AC_PROG_INSTALL
 # Locate the C++ compiler.
 AC_PROG_CXX
 
-AC_PROG_RANLIB
+# Set up LibTool
+LT_INIT([disable-shared])
 
 dnl Set the version for the library -- this concerns compatibility of the
 dnl source and binary interface of the library and is not the same as the
