use find_package to find memtailor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,22 +20,29 @@ add_library(mathic
   src/mathic/display.cpp
   src/mathic/error.cpp
   src/mathic/BinaryKDTree.h
+  src/mathic/stdinc.h
   )
 
-target_link_libraries(mathic memtailor)
+find_package(Threads 2.1 REQUIRED QUIET)
+find_package(Memtailor   REQUIRED)
+
+target_link_libraries(mathic ${MEMTAILOR_LIBRARIES} Threads::Threads)
 target_include_directories(mathic
   PUBLIC
     src
-    )
+    ${MEMTAILOR_INCLUDE_DIR}
+  )
   
 install(TARGETS mathic ARCHIVE DESTINATION lib)
-install(FILES include/mathic.h DESTINATION include)
+install(FILES src/mathic.h DESTINATION include)
 install(DIRECTORY src/mathic/
   DESTINATION include/mathic
   FILES_MATCHING PATTERN "*.h"
-  PATTERN stdinc.h EXCLUDE
+#  PATTERN stdinc.h EXCLUDE
   )
 
+option(enable_pqsim "Build pqsim" OFF)
+if(enable_pqsim)
 add_executable(pqsim
   src/pqsim/pqMain.h         src/pqsim/pqMain.cpp
   src/pqsim/Item.h           src/pqsim/Item.cpp
@@ -47,6 +54,11 @@ add_executable(pqsim
   src/pqsim/TourTreeModel.h
   src/pqsim/stdinc.h
   )
+target_link_libraries(pqsim mathic)
+endif()
+
+option(enable_divsim "Build pqsim" OFF)
+if(enable_divsim)
 add_executable(divsim
   src/divsim/divMain.h       src/divsim/divMain.cpp 
   src/divsim/Simulation.h    src/divsim/Simulation.cpp
@@ -55,8 +67,8 @@ add_executable(divsim
   src/divsim/Monomial.h
   src/divsim/stdinc.h
   )
-target_link_libraries(pqsim mathic)
 target_link_libraries(divsim mathic)
+endif()
 
 option(PACKAGE_TESTS "Build the tests" ON)
 if(PACKAGE_TESTS)
@@ -70,7 +82,6 @@ if(PACKAGE_TESTS)
     src/test/testMain.cpp
     )
   target_link_libraries(mathic-gtests mathic)
-  endif()
 
 ################################
 # add gtest testing ############
@@ -99,4 +110,4 @@ target_include_directories(mathic-gtests
 add_test(NAME mathic-gtests
       COMMAND mathic-gtests
   )
-
+endif()
