--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,27 +5,15 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(mathic VERSION 1.0 LANGUAGES CXX)
 
+option(enable_pqsim "Build pqsim" OFF)
+option(enable_divsim "Build divsim" OFF)
+
+set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
+
 find_package(Threads 2.1 REQUIRED QUIET)
 find_package(Memtailor   REQUIRED)
 
-
-
-include(CheckIncludeFiles)
-check_include_files("stdlib.h;stdarg.h;string.h;float.h" STDC_HEADERS)
-check_include_files(sys/types.h	HAVE_SYS_TYPES_H)
-check_include_files(sys/stat.h	HAVE_SYS_STAT_H)
-check_include_files(stdlib.h	HAVE_STDLIB_H)
-check_include_files(string.h	HAVE_STRING_H)
-check_include_files(memory.h	HAVE_MEMORY_H)
-check_include_files(strings.h	HAVE_STRINGS_H)
-check_include_files(inttypes.h	HAVE_INTTYPES_H)
-check_include_files(stdint.h	HAVE_STDINT_H)
-check_include_files(unistd.h	HAVE_UNISTD_H)
-check_include_files(dlfcn.h	HAVE_DLFCN_H)
-
-# set_property(TARGET mathic PROPERTY CXX_STANDARD 11)
 add_compile_options(
-  -g -O2
   -DPACKAGE_NAME="${PROJECT_NAME}"
   -DPACKAGE_TARNAME="${PROJECT_NAME}"
   -DPACKAGE_VERSION="${PROJECT_VERSION}"
@@ -34,9 +22,7 @@ add_compile_options(
   -DPACKAGE_URL=""
   -DPACKAGE="${PROJECT_NAME}"
   -DVERSION="${PROJECT_VERSION}"
-  # TODO
-  -DLT_OBJDIR=".libs/"
-)
+  )
 
 add_library(mathic STATIC
   src/mathic.h
@@ -61,22 +47,21 @@ add_library(mathic STATIC
 target_link_libraries(mathic ${MEMTAILOR_LIBRARIES} Threads::Threads)
 target_include_directories(mathic
   PUBLIC
-    src
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/src>
+    $<INSTALL_INTERFACE:include>
     ${MEMTAILOR_INCLUDE_DIR}
   )
+set_target_properties(mathic PROPERTIES PUBLIC_HEADER src/mathic.h)
 
-install(TARGETS mathic ARCHIVE DESTINATION lib)
-install(FILES src/mathic.h DESTINATION include)
-install(DIRECTORY src/mathic/
-  DESTINATION include/mathic
+install(TARGETS mathic LIBRARY DESTINATION lib)
+install(DIRECTORY src/mathic
+  DESTINATION include
   FILES_MATCHING PATTERN "*.h"
-#  PATTERN stdinc.h EXCLUDE
   )
 install(FILES README.md lgpl-2.0.txt lgpl-2.1.txt lgpl-3.0.txt
   DESTINATION licenses/mathic
   )
 
-option(enable_pqsim "Build pqsim" OFF)
 if(enable_pqsim)
 add_executable(pqsim
   src/pqsim/pqMain.h         src/pqsim/pqMain.cpp
@@ -92,7 +77,6 @@ add_executable(pqsim
 target_link_libraries(pqsim mathic)
 endif()
 
-option(enable_divsim "Build divsim" OFF)
 if(enable_divsim)
 add_executable(divsim
   src/divsim/divMain.h       src/divsim/divMain.cpp 
@@ -105,9 +89,8 @@ add_executable(divsim
 target_link_libraries(divsim mathic)
 endif()
 
-option(BUILD_TESTING "Build the tests" ON)
+include(CTest)
 if(BUILD_TESTING)
-  enable_testing()
   add_executable(mathic-gtests
     src/test/BitTriangle.cpp
     src/test/DivFinder.cpp
@@ -122,7 +105,6 @@ if(BUILD_TESTING)
   find_package(GTest)
   include(GoogleTest)
   gtest_discover_tests(mathic-gtests)
-  add_test(NAME mathic-gtests COMMAND mathic-gtests)
 
   if(GTEST_FOUND)
     target_link_libraries(mathic-gtests mathic GTest::GTest GTest::Main)
